--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -79,22 +80,8 @@
             android:layout_width="@dimen/home_header_aside_layout_width"
             android:layout_height="match_parent"
             android:gravity="center_horizontal"
-            android:orientation="vertical"
-            android:paddingBottom="@dimen/home_header_aside_layout_vertical_padding"
-            android:paddingTop="@dimen/home_header_aside_layout_vertical_padding">
-
-            <TextView
-                android:id="@+id/timerToken"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Time:" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="horizontal">
+            android:paddingTop="@dimen/home_header_aside_layout_vertical_padding"
+            android:paddingBottom="@dimen/home_header_aside_layout_vertical_padding">
 
             <RelativeLayout
                 android:layout_width="match_parent"
