--- a/app/src/main/res/layout/fragment_all_stories.xml
+++ b/app/src/main/res/layout/fragment_all_stories.xml
@@ -14,14 +14,21 @@
         <!-- Header -->
        <include layout="@layout/green_header_frame_layout"/>
 
-
-        <ListView
-            android:layout_weight="1"
+        <android.support.v4.widget.SwipeRefreshLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/all_stories_swipeContainer"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:id="@+id/listview"
-            android:divider="@color/softGrey"
-            android:dividerHeight="1dp"/>
+            android:layout_height="match_parent">
+
+            <ListView
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:id="@+id/listview"
+                android:divider="@color/softGrey"
+                android:dividerHeight="1dp"/>
+
+        </android.support.v4.widget.SwipeRefreshLayout>
 
 
         <!-- Navigation Bar Maison -->
