--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,5 @@
 
     <!--  Theme  -->
     <color name="primary">#1aa19b</color>
-    <color name="primaryDark">#116461</color>
+    <color name="primaryDark">#13716e</color>
 </resources>
